# RT

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  TEAM_README.md  author  compile.sh  header.py  header_generator.py  init_opencl.py  init_rt.py  raw_aabbs_data
assets/3d_models/: RT_scene1.mtl  big_sphere.mtl  cube.mtl  cube_isosphere_materials.mtl  cube_plane_sphere.mtl  cubes_for_cornell_box.mtl  materials.mtl  obj_materials.mtl  sauron_tower.blend  sauron_tower.mtl  teapot_cornell_box_scene.blend  teapot_cornell_box_scene.blend1  teapot_cornell_box_scene.mtl  test_scene_materials.mtl  triang_sponza.mtl  triangulated_conference.mtl  untitled.blend
assets/3d_models/hippie-mobile/: hippie_mobile.mtl
cmake_search_modules/: FindOpenCL.cmake  FindSDL2_ttf.cmake
includes/: gui.h  gui_defines.h  gui_errors.h  gui_structs.h  rt.h  rt_colors.h  rt_debug.h  rt_defines.h  rt_errors.h  rt_events.h  rt_gui.h  rt_gui_defines.h  rt_gui_errors.h  rt_gui_structs.h  rt_host_structs.h  rt_init.h  rt_kd_tree.h  rt_load_obj_files.h  rt_load_textures.h  rt_math_utils.h  rt_opencl.h  rt_opencl_params_defines.h  rt_parser_defines.h  rt_parsing.h  rt_shared_structs.h  rt_structs.h  rt_wavefront_render.h  rt_window_params.h  stb_image.h  textures.h  tiny_obj_loader_c.h
lib/: libjansson.4.dylib  libjansson.la
lib/pkgconfig/: jansson.pc
scenes/: 1scene.json  big_sphere.json  calc_tex.cl  cornell_box.json  cornell_box_raytrace.json  cornell_box_scene.json  cube_plane_sphere.json  easy_scene.json  fucked_up_cornell_box.json  hippie_mobile_scene.json  kolyan_scene.json  materials_test.json  monk_scene.json  obj_scene.json  one_cylinder.json  one_sphere.json  pathtrace_scene.json  pbr_texture_scene.json  plane_cone.json  ray_march_bolt.json  ray_march_object.json  ray_march_rain.json  sauron_tower_scene.json  scene1.json  scene_template.json  sleonard_scene1.json  spheres.json  texture_cornell_box.json  texture_scene.json
sources/: calc_tex.c  main.c  read_tex.c
sources/OpenCL/: rt_init_render_kernel.c  rt_opencl_cache_program.c  rt_opencl_files_parser.c  rt_opencl_init.c  rt_opencl_kernels_compile.c  rt_opencl_kernels_exec.c  rt_opencl_kernels_exec_utils.c  rt_opencl_memory_management.c  rt_opencl_prepare_mem_array.c  rt_opencl_prepare_memory.c  rt_opencl_render.c  rt_opencl_utils.c
sources/OpenCL_kernel_code/: color_utils.cl  math_utils.cl  opencl_defines.cl  opencl_structs.cl  prototypes.cl  raytrace.cl  rt_main.cl  test_kernel.cl  utils.cl
sources/OpenCL_kernel_code/light_computing/: light_computing.cl
sources/OpenCL_kernel_code/mesh_render/: mesh_intersection.cl  mesh_render_utis.cl
sources/OpenCL_kernel_code/object_intersections/: intersection_utils.cl  mesh_intersection.cl  ray_aabb_intersection.cl  ray_trianlge_intersection.cl  simple_object_intersections.cl
sources/OpenCL_kernel_code/pathtrace_algo/: pathtrace.cl  pathtrace_utils.cl  shade_pathtrace.cl  texture_shade_pathtrace.cl
sources/OpenCL_kernel_code/texture_formulas/: calc_textures.cl  (+2 more)
sources/OpenCL_utils/: opencl_files_parser.c  opencl_init.c  opencl_memory_management.c  opencl_render.c  opencl_utils.c  rt_init_render_kernel.c  rt_init_renderer.c  rt_opencl_files_parser.c  rt_opencl_init.c  rt_opencl_kernels_compile.c  rt_opencl_memory_management.c  rt_opencl_prepare_memory.c  rt_opencl_render.c  rt_opencl_utils.c  rt_wavefront_prepare_memory.c  rt_wavefront_render.c
sources/SDL_utils/: sdl_init.c
sources/debug/: opencl_debug.c  print_bits.c  rt_debug_info.c  rt_debug_print_parsed_meshes.c  rt_debug_print_utils.c  rt_debug_utils.h  rt_kd_tree_debug.c  rt_kd_tree_print.c  rt_pathtrace_profile.c  rt_print_obj_file.c  rt_print_object.c  rt_profiling.c
sources/gui/: button_callback.c  buttons.c  fuck_norminette.c  gui_init.c  rt_gui_button_callback.c  rt_gui_buttons.c  rt_gui_init.c  rt_handle_event_gui.c  rt_sync_options.c
sources/init/: draw_perlin.c  nuklear_init.c  rt_init.c  rt_init_render_params.c  rt_load_textures.c  rt_load_textures_utils.c  rt_parse_options.c
sources/kd_tree/: rt_kd_build_recursive.c  rt_kd_get_aabb.c  rt_kd_pack_object_indices.c  rt_kd_split_buckets_sah.c  rt_kd_tree_build.c  rt_kd_tree_build.h  rt_kd_tree_build_aabb_utils.c  rt_kd_tree_debug.c  rt_kd_tree_export.c  rt_kd_tree_get.c  rt_kd_tree_import.c  rt_kd_tree_to_array.c  rt_kd_tree_utils.c
sources/kernel/: color_utils.cl  img_gen_main.cl  kernel_defines.cl  kernel_structs.cl  math_utils.cl  opencl_defines.cl  opencl_structs.cl  prototypes.cl  rays_gen_main.cl  raytrace.cl  render_utils.cl  rt_main.cl  shade_raytrace.cl  stack.cl  utils.cl
sources/math_utils/: rt_cl_float3_utils.c  rt_cl_float3_utils2.c  rt_math_utils.c  rt_rotation_utils.c  rt_vector_math.c
sources/obj_loading/: rt_correct_materials.c  rt_load_obj_files.c  rt_load_obj_materials.c  rt_load_obj_meshes.c  rt_load_obj_utils.c  rt_load_vertices.c
sources/render/: render.c  rt_loop.c  rt_update_params.c
sources/rt_event_handling/: rt_camera_moves.c  rt_event_handler.c  rt_event_handling.c  rt_event_utils.c  rt_events.h  rt_key_event_handing.c  rt_key_event_handing2.c  rt_mouse_event_handling.c  rt_settings_change.c  rt_settings_info.c
sources/rt_parsing/: add_elements.c  hardcoded_scene.c  main.c  print_scene_params_delete_if_everything_works.c  print_scene_params_tmp.c  rt_add_elements.c  rt_add_to_scene.c  rt_check.c  rt_correct_materials.c  rt_correct_scene.c  rt_init_tmp_object.c  rt_load_obj_files.c  rt_load_obj_files.h  rt_load_obj_meshes.c  rt_load_obj_utils.c  rt_parse_elements.c  rt_parse_scene.c  rt_parsing.h  type_of_element.c
sources/test/: kolyan_aabb_test_parser.c  test_asserts.c  test_event_loop.c  test_header.h  test_kernel.cl  test_lerp.c  test_main.c  test_opencl.c  test_utils.c
sources/utils/: rt_color_utils.c  rt_common_read_file.c  rt_exit_clean.c  rt_hash.c  rt_loop.c  rt_raise_error.c  rt_safe_malloc.c
sources/wavefront_render/: rt_wavefront_prepare_memory.c  rt_wavefront_render.c  wavefront_bzero_utils.c  wavefront_run_kernels.c  wavefront_run_kernels_utils.c  wavefront_setup_kernels.c  wavefront_utils.c
(+167 files in other folders)
